--- a/src/components/WineGlass/WineGlass.scss
+++ b/src/components/WineGlass/WineGlass.scss
@@ -1,16 +1,22 @@
 .WineGlass {
+  position: relative;
   display: grid;
   grid-template-areas: "sumOverlayGlass";
   justify-content: center;
   align-content: center;
   justify-items: center;
   align-items: center;
+  text-align: center;
   .wineGlassImage {
     grid-area: sumOverlayGlass;
     width: 50px;
     height: 50px;
   }
   .wineGlassText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     grid-area: sumOverlayGlass;
     font-size: 1.25em;
     font-weight: 600;
